1.9.2
-----
(RB=183317)
Simplify and speed up string intern tests in TestJacksonCodec. This only affects tests.

(RB=182331)
Adding support for java array return and input parameters for actions.

1.9.1
------
(RB=182338)
Fix bug in pegasus plugin that publish snapshot task may not run.

(RB=181765)
Fix up jdk7 warnings. 

(RB=171893)
Added server/client compression filters and associated test cases.

1.9.0
------
(RB=176567)
Introduce simple resources concept which serves a single entity from a particular path.

(RB=174576)
Clean up SLF4J/Log4j mess by removing all dependencies on Log4j and
the SLF4J/Log4j adapter from production jars.

If your executable (war file, etc.) does not already depend on an SLF4J
adapter, you may need to introduce such a dependency, for example on
slf4jlog4j12.

(RB=176574)
Incorporate snapshot into pegasus plugin. All existing projects will automatically generate and publish the snapshot files.

(RB=179212)
add defaultRouting option to d2Config.

1.8.39
------
(RB=177700)
pegasus plugin and idl compatibility checker will check for missing and extra published idl files.

1.8.38
------
(RB=175711)
When generating idl, pass the source files of the resource classes to Javadoc.
When checking idl compatibility, doc field change is now a backwards compatible change instead of equivalent.

(RB=178168)
Update gradle plugin to check source of all languages when deciding if idl generation should be skipped.  This fixes a bug where scala
*Resource.scala files were ignored.

(RB=172518)
Use PegasusPlugin to build pegasus integration test modules and examples.

1.8.37
------
(RB=176630)
Fix a pegasus plugin regression about null pointer.

1.8.36
------
(RB=175637)
Fix HttpClientFactory.shutdown() with timeout so it does not tie up
the executor for the length of the timeout.

(RB=173757)
Snapshots implemented locally in pegasus.  PegasusPlugin was not changed, so others using pegasus won't be able to use Snapshots yet.